--- a/public/auth.html
+++ b/public/auth.html
@@ -170,8 +170,7 @@
 
     </main>
 
-    <script src="assets/scripts/main.js"></script>
-    <script src="assets/scripts/auth.js"></script>
+    <script src="bundle.js"></script>
 
 </body>
 </html>
