--- a/public/index.html
+++ b/public/index.html
@@ -267,7 +267,7 @@
 
     </footer>
 
-    <script src="assets/scripts/main.js"></script>
+    <script src="bundle.js"></script>
 
 </body>
 </html>
