--- a/public/schedules-new.html
+++ b/public/schedules-new.html
@@ -165,8 +165,7 @@
 
     </section>
 
-    <script src="assets/scripts/main.js"></script>
-    <script src="assets/scripts/calendar.js"></script>
+    <script src="bundle.js"></script>
 
 </body>
 </html>
