--- a/public/auth.html
+++ b/public/auth.html
@@ -58,6 +58,8 @@
 
                 <hr />
 
+                <button class="facebook" type="button">Login com Facebook</button>
+
                 <div class="field">
                     <input type="email" name="email" id="email-login" />
                     <label for="email-login">E-mail</label>
@@ -90,8 +92,8 @@
                 <hr />
 
                 <div class="field">
-                    <input type="email" name="email" id="email-login" />
-                    <label for="email-login">E-mail</label>
+                    <input type="email" name="email" id="email-register" />
+                    <label for="email-register">E-mail</label>
                 </div>
 
                 <div class="field">
@@ -176,6 +178,5 @@
     </main>
 
     <script src="bundle.js"></script>
-
 </body>
 </html>
