--- a/public/schedules-services.html
+++ b/public/schedules-services.html
@@ -84,6 +84,9 @@
 
             <form action="schedules-payment.html">
 
+                <input type="hidden" name="schedule_at" />
+                <input type="hidden" name="option" />
+
                 <div class="options">
 
                     <label>
