--- a/public/auth.html
+++ b/public/auth.html
@@ -133,7 +133,20 @@
 
                 <hr />
 
-                <div class="loading-wrap">
+                <div class="field">
+                    <input type="email" name="email" id="email-forget" />
+                    <label for="email-forget">E-mail</label>
+                </div>
+
+                <div class="alert danger"></div>
+
+                <div class="actions">
+
+                    <button type="submit">Enviar</button>
+
+                </div>
+
+                <!--<div class="loading-wrap">
                     <div class="loading">
                         <div></div>
                         <div></div>
@@ -141,7 +154,7 @@
                         <div></div>
                     </div>
                     <p>Por favor, aguarde...</p>
-                </div>
+                </div>-->
 
                 <div class="message">
 
