--- a/public/auth.html
+++ b/public/auth.html
@@ -58,10 +58,8 @@
 
                 <hr />
 
-                <button class="facebook" type="button">Login com Facebook</button>
-
                 <div class="field">
-                    <input type="email" name="email" id="email-login" />
+                    <input type="email" name="email" id="email-login" readonly value="joao@hcode.com.br" />
                     <label for="email-login">E-mail</label>
                 </div>
 
@@ -70,14 +68,11 @@
                     <label for="password">Digite sua Senha</label>
                 </div>
 
-                <div class="alert danger"></div>
-
                 <div class="actions">
 
                     <div>
                         <a href="auth.html#forget" class="link">Esqueceu sua senha?</a>
-                        <a href="auth.html#register" class="link">Criar uma Conta</a>
-                        <!--<a href="auth.html" class="link">Este não é o seu e-mail?</a>-->
+                        <a href="auth.html" class="link">Este não é o seu e-mail?</a>
                     </div>
                     <button type="submit">Login</button>
 
@@ -92,8 +87,8 @@
                 <hr />
 
                 <div class="field">
-                    <input type="email" name="email" id="email-register" />
-                    <label for="email-register">E-mail</label>
+                    <input type="email" name="email" id="email-login" readonly value="joao@hcode.com.br" />
+                    <label for="email-login">E-mail</label>
                 </div>
 
                 <div class="field">
@@ -116,8 +111,6 @@
                     <label for="password-confirm">Confirme a Senha</label>
                 </div>
 
-                <div class="alert danger"></div>
-
                 <div class="actions">
 
                     <a href="auth.html#login" class="link">Já tem uma conta?</a>
@@ -133,20 +126,7 @@
 
                 <hr />
 
-                <div class="field">
-                    <input type="email" name="email" id="email-forget" />
-                    <label for="email-forget">E-mail</label>
-                </div>
-
-                <div class="alert danger"></div>
-
-                <div class="actions">
-
-                    <button type="submit">Enviar</button>
-
-                </div>
-
-                <!--<div class="loading-wrap">
+                <div class="loading-wrap">
                     <div class="loading">
                         <div></div>
                         <div></div>
@@ -154,7 +134,7 @@
                         <div></div>
                     </div>
                     <p>Por favor, aguarde...</p>
-                </div>-->
+                </div>
 
                 <div class="message">
 
