--- a/public/schedules-new.html
+++ b/public/schedules-new.html
@@ -152,9 +152,9 @@
             </div>
 
             <form action="schedules-time-options.html">
-
-                <input type="hidden" name="schedule_at">
                 
+                <input type="hidden" name="schedule_at" />
+
                 <footer class="fixed">
     
                     <a href="index.html">Voltar</a>
@@ -163,7 +163,7 @@
                 </footer>
             </form>
 
-        </main>
+        </main>        
 
     </section>
 
