--- a/public/schedules-payment.html
+++ b/public/schedules-payment.html
@@ -82,7 +82,11 @@
 
         <main>
 
-            <form action="schedules-summary.html">
+            <form action="schedules-address.html">
+
+                <input type="hidden" name="schedule_at">
+                <input type="hidden" name="option">
+                <input type="hidden" name="service">
 
                 <div class="form-creditcard">
 
